@@ -14,6 +14,19 @@ java {
   targetCompatibility = JavaVersion.VERSION_14
 }
 
+tasks.compileJava {
+  options.compilerArgs.add("--enable-preview")
+}
+
+tasks.compileTestJava {
+  options.compilerArgs.add("--enable-preview")
+}
+
+tasks.test {
+  useJUnitPlatform()
+  jvmArgs("--enable-preview")
+}
+
 repositories {
   mavenCentral()
   jcenter()
